--- a/index.html
+++ b/index.html
@@ -10,46 +10,74 @@
 </head>
 
 <body>
-    
     <div class="wrapper">
         <!------------------------------ header ------------------------------------------->
         <header class="header">
-            <div class="header__container container">
+            <div class="header__container container-main">
+                <div class="header__burger-block">
+                    <div class="header__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <a href="#" class="header__burger-title">
+                        MENU
+                    </a>
+                </div>
                 <div class="header__logo">
-                    <img src="./image/LOGO.png" alt="">
+                    <img src="./image/Logo.png" alt="logo">
                 </div>
-                <nav class="header__menu menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Home</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Process</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Company</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Why us</a> 
-                        </li>
-                    </ul>
-                </nav>
-                <div class=""></div>
-                <div class="header__contact contact">
-                    <p class="contact__us">Contact us</p>
+                <div class="header__block">
+                    <a href="#" class="header__link">
+                        Connect Wallet
+                    </a>
                 </div>
+                <!-- <div class="header__body">
+                    <nav class="header__menu menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">About OYA</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Your Journey</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Roadmap</a> 
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Mint NFT</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Gallery</a> 
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">News</a> 
+                            </li>
+                        </ul>
+                    </nav>
+                </div> -->
             </div>
         </header>
+        <!------------------------------ main ------------------------------------------->
         <main class="page">
+            <!------------------------------ page__main-block ------------------------------------------->
             <div class="page__main-block main-block">
                 <div class="main-block__container _container">
                     
                 </div> 
+                <div class="main-block__image _ibg">
+                    <img src="./image/main image.jpg" alt="cover">
+                </div> 
             </div>
         </main>
-        <footer class="footer">
-            Footerrr
-        </footer>
+        <!-- <footer class="footer">
+        </footer> -->
     </div>
 </body>
 
