--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
                         <span></span>
                     </div>
                     <a href="#" class="header__burger-title">
-                        MENU
+                        menu
                     </a>
                 </div>
                 <div class="header__logo">
                     <img src="./image/Logo.png" alt="logo">
                 </div>
                 <div class="header__block">
+                    <div class="filter-blur"></div>
                     <a href="#" class="header__link">
                         Connect Wallet
                     </a>
@@ -69,9 +70,36 @@
             <!------------------------------ page__main-block ------------------------------------------->
             <div class="page__main-block main-block">
                 <div class="main-block__container _container">
-                    
+                    <div class="main-block__body">
+                        <div class="main-block__section-content1">
+                            <div class="section-content1__block">
+                                <a class="section-content1__link" herf="#">
+                                    Membership
+                                </a>
+                            </div>
+                            <p class="section-content1__text">
+                                Your new all-inclusive getaway with extraordinary and memorable experiences waiting to happen
+                            </p>
+                        </div>
+                        <div class="main-block__section-content2">
+                            <p class="section-content2__title">
+                                NATURE <span>TEACHES</span> us AND WE ABIDE
+                            </p>
+                        </div>
+                        <div class="main-block__section-content3">
+                            <p class="section-content3__text">
+                                A new way of living, focused on solutions that optimize health, longevity & sustainability
+                            </p>
+                            <div class="section-content3__block">
+                                <a class="section-content3__link" herf="#">
+                                    Join Whitelist
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div> 
                 <div class="main-block__image _ibg">
+                    <div class="main-block__gradient"></div>
                     <img src="./image/main image.jpg" alt="cover">
                 </div> 
             </div>
