--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <!------------------------------ header ------------------------------------------->
         <header class="header">
-            <div class="header__container container-main">
+            <div class="header__container container">
                 <div class="header__burger-block">
                     <div class="header__burger">
                         <span></span>
@@ -69,7 +69,7 @@
         <main class="page">
             <!------------------------------ page__main-block ------------------------------------------->
             <div class="page__main-block main-block">
-                <div class="main-block__container _container">
+                <div class="main-block__container container-main">
                     <div class="main-block__body">
                         <div class="main-block__section-content1">
                             <div class="section-content1__block">
@@ -82,8 +82,17 @@
                             </p>
                         </div>
                         <div class="main-block__section-content2">
-                            <p class="section-content2__title">
-                                NATURE <span>TEACHES</span> us AND WE ABIDE
+                            <p class="section-content2__text">
+                                NATURE
+                            </p>
+                            <p class="section-content2__text">
+                                TEACHES
+                            </p>
+                            <p class="section-content2__text">
+                                us AND WE
+                            </p>
+                            <p class="section-content2__text">
+                                ABIDE
                             </p>
                         </div>
                         <div class="main-block__section-content3">
