--- a/index.html
+++ b/index.html
@@ -8,114 +8,121 @@
     <title>My Practice</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
-<body>
-    <div class="wrapper">
-        <!------------------------------ header ------------------------------------------->
-        <header class="header">
-            <div class="header__container container">
-                <div class="header__burger-block">
-                    <div class="header__burger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
+    <body>
+        <div class="wrapper">
+            <!------------------------------ header ------------------------------------------->
+            <header class="header">
+                <div class="header__container container">
+                    <div class="header__burger-block">
+                        <div class="header__burger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <a href="#" class="header__burger-title">
+                            menu
+                        </a>
                     </div>
-                    <a href="#" class="header__burger-title">
-                        menu
+                    <a href="index.html" class="header__logo">
+                        <img src="./image/main-page/Logo.png" alt="logo">
                     </a>
+                    <div class="header__block">
+                        <div class="filter-blur"></div>
+                        <a href="#" class="header__link">
+                            Connect Wallet
+                        </a>
+                    </div>
+                    <!-- <div class="header__body">
+                        <nav class="header__menu menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">Home</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">About OYA</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">Your Journey</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">Roadmap</a> 
+                                </li>
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">Mint NFT</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">Gallery</a> 
+                                </li>
+                                <li class="menu__item">
+                                    <a href="#" class="menu__link">News</a> 
+                                </li>
+                            </ul>
+                        </nav>
+                    </div> -->
                 </div>
-                <div class="header__logo">
-                    <img src="./image/Logo.png" alt="logo">
-                </div>
-                <div class="header__block">
-                    <div class="filter-blur"></div>
-                    <a href="#" class="header__link">
-                        Connect Wallet
-                    </a>
-                </div>
-                <!-- <div class="header__body">
-                    <nav class="header__menu menu">
-                        <ul class="menu__list">
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Home</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">About OYA</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Your Journey</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Roadmap</a> 
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Mint NFT</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">Gallery</a> 
-                            </li>
-                            <li class="menu__item">
-                                <a href="#" class="menu__link">News</a> 
-                            </li>
-                        </ul>
-                    </nav>
-                </div> -->
-            </div>
-        </header>
-        <!------------------------------ main ------------------------------------------->
-        <main class="page">
-            <!------------------------------ page__main-block ------------------------------------------->
-            <div class="page__main-block main-block">
-                <div class="main-block__container container-main">
-                    <div class="main-block__body">
-                        <div class="main-block__section-content1">
-                            <div class="section-content1__block">
-                                <a class="section-content1__link" herf="#">
-                                    Membership
+            </header>
+            <!------------------------------ main ------------------------------------------->
+            <main class="page">
+                <!------------------------------ page__main-block ------------------------------------------->
+                <div class="page__main-block main-block">
+                    <div class="main-block__container container-main">
+                        <div class="main-block__padding">
+                            <div class="main-block__body">
+                                <div class="main-block__section-content1">
+                                    <div class="section-content1__block">
+                                        <a class="section-content1__link" herf="#">
+                                            Membership
+                                        </a>
+                                    </div>
+                                    <p class="section-content1__text">
+                                        Your new all-inclusive getaway with extraordinary and memorable experiences waiting to happen
+                                    </p>
+                                </div>
+                                <div class="main-block__section-content2">
+                                    <p class="section-content2__text">
+                                        NATURE
+                                    </p>
+                                    <p class="section-content2__text">
+                                        TEACHES
+                                    </p>
+                                    <p class="section-content2__text">
+                                        us AND WE
+                                    </p>
+                                    <p class="section-content2__text">
+                                        ABIDE
+                                    </p>
+                                </div>
+                                <div class="main-block__section-content3">
+                                    <p class="section-content3__text">
+                                        A new way of living, focused on solutions that optimize health, longevity & sustainability
+                                    </p>
+                                    <div class="section-content3__block">
+                                        <a class="section-content3__link" herf="#">
+                                            Join Whitelist
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="main-block__arrow-block">
+                                <a href="#" class="main-block__arrow-link">
+                                    <img src="./image/main-page/icons/Vector 45.svg" alt="arrow">
                                 </a>
                             </div>
-                            <p class="section-content1__text">
-                                Your new all-inclusive getaway with extraordinary and memorable experiences waiting to happen
-                            </p>
                         </div>
-                        <div class="main-block__section-content2">
-                            <p class="section-content2__text">
-                                NATURE
-                            </p>
-                            <p class="section-content2__text">
-                                TEACHES
-                            </p>
-                            <p class="section-content2__text">
-                                us AND WE
-                            </p>
-                            <p class="section-content2__text">
-                                ABIDE
-                            </p>
-                        </div>
-                        <div class="main-block__section-content3">
-                            <p class="section-content3__text">
-                                A new way of living, focused on solutions that optimize health, longevity & sustainability
-                            </p>
-                            <div class="section-content3__block">
-                                <a class="section-content3__link" herf="#">
-                                    Join Whitelist
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-                <div class="main-block__image _ibg">
-                    <div class="main-block__gradient"></div>
-                    <img src="./image/main image.jpg" alt="cover">
-                </div> 
-            </div>
-        </main>
-        <!-- <footer class="footer">
-        </footer> -->
-    </div>
-</body>
-
+                    </div> 
+                    <div class="main-block__image _ibg">
+                        <div class="main-block__gradient"></div>
+                        <img src="./image/main-page/main image.jpg" alt="cover">
+                    </div> 
+                </div>
+            </main>
+            <!-- <footer class="footer">
+            </footer> -->
+        </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
+        <script src="./js/script.js"></script>
+    </body>
 </html>
