add hidden menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         <div class="wrapper">
-            <!------------------------------ header ------------------------------------------->
+            <!-- ---------------------------- header ----------------------------------------- -->
             <header class="header">
                 <div class="header__container container">
                     <div class="header__burger-block">
@@ -35,8 +35,12 @@
                             Connect Wallet
                         </a>
                     </div>
-                    <!-- <div class="header__body">
-                        <nav class="header__menu menu">
+                </div>
+            </header>
+            <header class="header__menu-content">
+                <div class="header__menu-container _container">
+                    <div class="header__body">
+                        <nav class="header__menu">
                             <ul class="menu__list">
                                 <li class="menu__item">
                                     <a href="#" class="menu__link">Home</a>
@@ -48,25 +52,61 @@
                                     <a href="#" class="menu__link">Your Journey</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Roadmap</a> 
+                                    <a href="#" class="menu__link">Roadmap</a>
                                 </li>
                                 <li class="menu__item">
                                     <a href="#" class="menu__link">Mint NFT</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Gallery</a> 
+                                    <a href="#" class="menu__link">Gallery</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">News</a> 
+                                    <a href="#" class="menu__link">News</a>
                                 </li>
                             </ul>
                         </nav>
-                    </div> -->
+                        <div class="header__head-contacts">
+                            <h3 class="head-contacts__title">
+                                contacts
+                            </h3>
+                            <div class="head-contacts__block">
+                                <a href="#" class="head-contacts__email">oya@oyanewearth.com</a>
+                            </div>
+                            <ul class="head-contacts__list">
+                                <li class="head-contacts__item">
+                                    <a href="#" class="head-contacts__link">Discord</a>
+                                </li>
+                                <li class="head-contacts__item">
+                                    <a href="#" class="head-contacts__link">Twitter</a>
+                                </li>
+                                <li class="head-contacts__item">
+                                    <a href="#" class="head-contacts__link">Instagram</a>
+                                </li>
+                                <li class="head-contacts__item">
+                                    <a href="#" class="head-contacts__link">Telegram</a>
+                                </li>
+                            </ul>
+                            <div class="head-contacts__paper-block">
+                                <img src="image/main-page/icons/paper.svg" alt="paper">
+                                <a href="#" class="head-contacts__link-download">whitepaper</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header-copyright container">
+                        <div class="header-copyright__container">
+                            <p>
+                                © OYA. ALL RIGHTS RESERVED
+                            </p>
+                            <p>
+                                PRIVACY POLICY
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </header>
-            <!------------------------------ main ------------------------------------------->
+            <!-- ---------------------------- main ----------------------------------------- -->
             <main class="page">
-                <!------------------------------ page__main-block ------------------------------------------->
+                <!-- ---------------------------- page__main-block ----------------------------------------- -->
                 <div class="page__main-block main-block">
                     <div class="main-block__container container-main">
                         <div class="main-block__padding">
