fix mistake in fonts

--- a/index.html
+++ b/index.html
@@ -29,15 +29,24 @@
                     <a href="index.html" class="header__logo">
                         <img src="./image/main-page/Logo.png" alt="logo">
                     </a>
-                    <div class="header__block">
-                        <div class="filter-blur"></div>
-                        <a href="#" class="header__link">
-                            Connect Wallet
-                        </a>
-                    </div>
+                    <a href="#" class="header__link">
+                    <span>Connect Wallet</span>
+                        <img class="header__link-mob" src="image/main-page/icons/wallet.png" alt="wallet">
+                    </a>
                 </div>
             </header>
+            <!-- -------------- header-close -------------- -->
+            <div class="header__close-block">
+                <div class="header__close">
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <!-- ------------------------------------------ -->
             <header class="header__menu-content">
+                <div class="header-image">
+                    <img src="image/main-page/Frame 13911.png" alt="image">
+                </div>
                 <div class="header__menu-container _container">
                     <div class="header__body">
                         <nav class="header__menu">
@@ -87,11 +96,12 @@
                                 </li>
                             </ul>
                             <div class="head-contacts__paper-block">
-                                <img src="image/main-page/icons/paper.svg" alt="paper">
-                                <a href="#" class="head-contacts__link-download">whitepaper</a>
+                                <a href="image/main-page/whitepaper.png" target="_blank" download="whitepaper"><img src="image/main-page/icons/paper.svg" alt="paper"></a>
+                                <a href="image/main-page/whitepaper.png" target="_blank" download="whitepaper" class="head-contacts__link-download">whitepaper</a>
                             </div>
                         </div>
                     </div>
+                    <div class="header-border"></div>
                     <div class="header-copyright container">
                         <div class="header-copyright__container">
                             <p>
@@ -112,11 +122,9 @@
                         <div class="main-block__padding">
                             <div class="main-block__body">
                                 <div class="main-block__section-content1">
-                                    <div class="section-content1__block">
-                                        <a class="section-content1__link" herf="#">
-                                            Membership
-                                        </a>
-                                    </div>
+                                    <a class="section-content1__link" herf="#">
+                                        Membership
+                                    </a>
                                     <p class="section-content1__text">
                                         Your new all-inclusive getaway with extraordinary and memorable experiences waiting to happen
                                     </p>
@@ -134,16 +142,17 @@
                                     <p class="section-content2__text">
                                         ABIDE
                                     </p>
+                                    <p class="section-content2__subtext">
+                                        A new way of living, focused on solutions that optimize health, longevity & sustainability
+                                    </p>
                                 </div>
                                 <div class="main-block__section-content3">
                                     <p class="section-content3__text">
                                         A new way of living, focused on solutions that optimize health, longevity & sustainability
                                     </p>
-                                    <div class="section-content3__block">
-                                        <a class="section-content3__link" herf="#">
-                                            Join Whitelist
-                                        </a>
-                                    </div>
+                                    <a class="section-content3__link" herf="#">
+                                        Join Whitelist
+                                    </a>
                                 </div>
                             </div>
                             <div class="main-block__arrow-block">
